# brigade

./: .env.example  .gitignore  Dockerfile  README.md  VERIFICATION.md  VERIFICATION_transcript.txt  WINDOWS_GUIDE.md
.github/workflows/: ci.yml  pages.yml
docs/: index.html
lean/: .gitkeep
scripts/: bench.py  bench_problems.jsonl  live_e2e.sh  make_site.py  run_server.ps1  run_server.sh  setup_lean.sh  windows_demo.ps1
server/: pyproject.toml
server/app/: agents.py  config.py  llm.py  main.py  models.py  numeric.py  orchestrator.py  prompts.py  retrieval.py  store.py  testing.py
server/app/lean/: verifier.py
server/app/static/: index.html
server/tests/: test_api.py  test_numeric.py  test_orchestrator.py  test_strategic.py  test_v2.py  test_verifier.py
