[project]
name = "brigade-server"
version = "0.1.0"
description = "Hierarchical multi-agent math prover with Lean 4 verification"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2.6", "anthropic>=0.40", "sympy>=1.12", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
